...
        className="flex-1"
      >
        <ScrollView>
          <View className="justify-center items-center min-h-screen p-9 w-full">
            <View className="flex-col justify-center items-center gap-3">
              <UserIcon />
              <Text className="text-white text-3xl font-irishGrover text-center" adjustsFontSizeToFit numberOfLines={1}>Criar uma conta</Text>
            </View>

            <View className="w-full gap-2">
              <Text className="text-white font-itim text-lg">Nome</Text>
              <TextInput
                value={name}
...
              </View>

              <Pressable onPress={handleSubmit} className="bg-[#EAAA6a] p-4 items-center justify-center rounded-xl active:opacity-70">
                <Text>Cadastrar</Text>
              </Pressable>

              <Text className="font-itim text-lg text-white text-center">Já possui uma conta? Faça o <Link href={"/user/auth/login"} className="text-cyan-500">Login</Link></Text>
            </View>
          </View>
        </ScrollView>
      </KeyboardAvoidingView>
    </ImageBackground>
  )
...
